--- a/css/descartes.css
+++ b/css/descartes.css
@@ -233,8 +233,8 @@
 
     .form-equipo > .btn-principal,
     .finalizar-seccion > .btn-finalizar {
-        display: block;
-        max-width: 400px;
+        display: inline-flex;
+        width: min(100%, 400px);
         margin-left: auto;
         margin-right: auto;
     }
